--- a/Frontend-Statia/package.json
+++ b/Frontend-Statia/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.17.1",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
+    "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-component": "^0.10.1",
     "babel-plugin-istanbul": "^4.1.1",
@@ -23,13 +24,15 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "bootstrap": "^4.0.0-beta.2",
+    "bootstrap-sass": "^3.3.7",
     "chai": "^3.5.0",
     "chalk": "^2.3.1",
+    "chart.js": "^2.7.2",
     "chartist": "^0.11.0",
     "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.0.1",
-    "css-loader": "^0.28.0",
+    "css-loader": "^0.28.11",
     "cssnano": "^3.10.0",
     "draggable": "^4.2.0",
     "es6-promise": "^4.1.1",
@@ -62,17 +65,19 @@
     "optimize-css-assets-webpack-plugin": "^2.0.0",
     "ora": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.14",
+    "popper.js": "^1.14.3",
     "rimraf": "^2.6.0",
     "sass-loader": "^6.0.6",
     "semver": "^5.5.0",
     "shelljs": "^0.7.8",
     "sinon": "^2.1.0",
     "sinon-chai": "^2.8.0",
+    "sweet-modal-vue": "^2.0.0",
     "sweetalert": "^2.1.0",
     "url-loader": "^0.5.8",
     "v-tooltip": "^2.0.0-rc.1",
-    "vodal": "^2.3.3",
     "vue": "^2.5.2",
+    "vue-chartjs": "^3.3.1",
     "vue-clickaway": "^2.1.0",
     "vue-dual-list": "^1.0.0",
     "vue-form-wizard": "^0.8.4",
